--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,6 +154,9 @@ footer {
         width: 200px;
         padding: 10px;
     }
+    nav {
+        margin-left: -10px;
+    }
     nav li {
         margin-right: 10px;
     }
