--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,17 +22,21 @@ header {
    overflow: hidden;
 }
 .header-jumbotron {
-    font-family: 'DM Serif Display', serif;
-    letter-spacing: 2px;
+    font-family: 'Josefin Sans', sans-serif;
 }
 .subheader-jumbotron {
     font-family: 'PT Serif', serif;
 }
 nav {
+    display: block !important;
     background-color: #000000;
     padding: 9px;
     position: sticky;
     top: 0;
+    z-index: 999;
+}
+.navbar-dropdown {
+    display: none !important;
 }
 nav a {
     font-size: 18px;
@@ -75,6 +79,7 @@ aside {
     max-height: 300px;
     object-fit: cover;
     object-position: top;
+    margin-bottom: 10px;
 }
 .product header {
     text-align: center;
@@ -82,7 +87,13 @@ aside {
 .product img {
     width: 200px;
 }
+.article-header {
+    margin-left: 15px;
+    text-align: left;
+}
 .text-source {
+    margin-left: 15px;
+    text-align: left;
     color: grey;
 }
 .text-article {
@@ -90,10 +101,9 @@ aside {
 }
 .continue-reading {
     text-align: left;
-    text-decoration-line: underline;
-}
-.continue-reading:hover {
-    cursor: pointer;
+    color: black;
+    font-weight: bold;
+    margin-bottom: 10px;
 }
 .price-before {
     color: red;
@@ -131,6 +141,68 @@ aside {
     background-color: #686868;
     transform: translateY(2px);
 }
+.product-display {
+    transition: 0.5s;
+}
+.product-display:hover {
+    transform: scale(1.1);
+}
+
+
+.navbar-dropdown {
+    overflow: hidden;
+    padding: 9px;
+    background-color: black;
+    font-family: inherit;
+    display: flex;
+  }
+  .navbar-dropdown a {
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  .dropdown {
+    margin-left: 10px;
+    overflow: hidden;
+  }
+  .dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+  }
+  .navbar-dropdown a:hover, .dropdown:hover .dropbtn {
+    background-color: #6790A7;
+  }
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  .dropdown-content a:hover {
+    background-color: #ddd;
+  }
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
+
 footer {
     margin-top: 30px;
     padding: 20px;
@@ -139,6 +211,7 @@ footer {
     text-align: center;
     font-weight: bold;
 }
+
 
 @media screen and (max-width: 1000px) {
     main {
@@ -155,9 +228,9 @@ footer {
         padding: 10px;
     }
     nav {
-        margin-left: -10px;
+        display: none !important;
     }
-    nav li {
-        margin-right: 10px;
+    .navbar-dropdown {
+        display: block !important;
     }
 }
